--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,124 @@ olefile
 # python-pptx==0.6.23
 # pdfminer.six==20201018
 # beautifulsoup4==4.12.2
+
+
+
+
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.0
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+argcomplete==1.10.3
+attrs==23.2.0
+beautifulsoup4==4.8.2
+blinker==1.8.2
+cachetools==5.4.0
+certifi==2024.7.4
+chardet==3.0.4
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+compressed_rtf==1.0.6
+dataclasses-json==0.6.7
+distro==1.9.0
+docx2txt==0.8
+ebcdic==1.1.1
+emoji==2.12.1
+extract-msg==0.28.7
+faiss-cpu==1.9.0.post1
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.139.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+google_search_results==2.4.2
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+grpcio==1.65.2
+grpcio-status==1.62.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+idna==3.7
+IMAPClient==2.1.0
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+langchain==0.2.11
+langchain-community==0.2.10
+langchain-core==0.2.26
+langchain-google-genai==1.0.8
+langchain-text-splitters==0.2.2
+langsmith==0.1.95
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mdurl==0.1.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
+olefile==0.47
+orjson==3.10.6
+packaging==24.1
+pandas==2.2.2
+pdfminer.six==20191110
+pillow==10.4.0
+proto-plus==1.24.0
+protobuf==4.25.4
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycryptodome==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+pyparsing==3.1.2
+pypdf==4.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-pptx==0.6.23
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.19.1
+rsa==4.9
+six==1.12.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+SpeechRecognition==3.8.1
+SQLAlchemy==2.0.31
+streamlit==1.37.0
+tenacity==8.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+uritemplate==4.1.1
+urllib3==2.2.2
+watchdog==4.0.1
+xlrd==1.2.0
+XlsxWriter==3.2.0
+yarl==1.9.4
+
+
